--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,7 +1,27 @@
+.table-wrap::-webkit-scrollbar{
+    width: 4px;
+    height: 4px;
+}
+
+.table-wrap::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+.table-wrap::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 10px;  
+}
+
+.table-wrap::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+}
+
 .table-wrap{
     display: flex;
     flex-direction: column;
     overflow-x: auto;
-    width: 95%;
+    overflow-y: auto;
+    height: 80vh;
+    width: 100%;
     align-items: flex-start;
 }
