--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,11 @@
+:root{
+    --main-bg-color: #000;
+}
+
+body{
+    background-color: var(--main-bg-color);
+}
+
 .table-wrap::-webkit-scrollbar{
     width: 4px;
     height: 4px;
