--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,30 +1,30 @@
-:root{
+:root {
     --main-bg-color: #000;
 }
 
-body{
+body {
     background-color: var(--main-bg-color);
 }
 
-.table-wrap::-webkit-scrollbar{
-    width: 4px;
+::-webkit-scrollbar {
+    width: 7px;
     height: 4px;
 }
 
-.table-wrap::-webkit-scrollbar-track {
-    background: #f1f1f1;
+::-webkit-scrollbar-track {
+    background: #4949492c;
 }
 
-.table-wrap::-webkit-scrollbar-thumb {
-    background-color: #888;
-    border-radius: 10px;  
+::-webkit-scrollbar-thumb {
+    background-color: #424242;
+    border-radius: 10px;
 }
 
-.table-wrap::-webkit-scrollbar-thumb:hover {
+::-webkit-scrollbar-thumb:hover {
     background-color: #555;
 }
 
-.table-wrap{
+.styled-table {
     display: flex;
     flex-direction: column;
     overflow-x: auto;
@@ -32,10 +32,32 @@ body{
     max-height: 80vh;
     width: 100%;
     align-items: flex-start;
+
+    border: 2px solid #424242;
+    border-radius: 10px;
+
+    table {
+        width: 100%;
+        border-collapse: collapse;
+
+        thead tr th {
+            padding: 10px 12px;
+            border: 1px solid #424242;
+            top: 0;
+            position: sticky;
+            --tw-bg-opacity: 1;
+            background-color: rgb(10 10 10 / var(--tw-bg-opacity));
+        }
+
+        tbody tr td {
+            padding: 4px 12px;
+            border: 1px solid #424242;
+        }
+    }
 }
 
-.custom-dropdown{
+.custom-dropdown {
     appearance: none;
-      -webkit-appearance: none;
-      -moz-appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
 }
